--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,3 @@
-MONGODB_HOST=127.0.0.1
-MONGODB_PORT=27017
-MONGODB_TEST_DATABASE=adonis_test
+DB_HOST=127.0.0.1
+DB_PORT=27017
+DB_TEST_DATABASE=adonis_test
